@@ -1,3 +1,12 @@
+2007-02-17  Akim Demaille  <akim.demaille@free.fr>
+
+	uobject-common.cc
+	* src/liburbi/uobject/uobject-common.cc (varmap, functionmap)
+	(monitormap, accessmap, eventmap, eventendmap, timermap)
+	(updatemap, cast, cleanTable): New.
+	* src/liburbi/uobject.cc: Extracted from here.
+	* src/liburbi/uobject/uobject.mk: Adjust.
+
 2007-02-15  Akim Demaille  <akim@lrde.epita.fr>
 
 	Indentation fixes
